Starting work on this stupid thing.